<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Features.RegisterActivity">

    <ImageView
        android:id="@+id/RegisterImg"

        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@mipmap/banner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/Banner" />

    <TextView
        android:id="@+id/RegisterTitle"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Register"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RegisterImg" />

    <EditText
        android:id="@+id/RegisterNameInput"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        android:hint="@string/Name_en"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RegisterTitle"
        android:autofillHints="" />

    <EditText
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:id="@+id/RegisterPasswordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints=""
        android:hint="@string/Password_en"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/RegisterNameInput"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="499dp" />

    <TextView
        android:id="@+id/RegisterLoginHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/HadAccount"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RegisterPasswordInput" />

    <TextView
        android:id="@+id/RegisterLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="10dp"
        android:text="@string/GoLogin"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/RegisterLoginHint"
        app:layout_constraintTop_toBottomOf="@id/RegisterPasswordInput" />

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Register_en"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RegisterPasswordInput"
        android:background="@drawable/round_panel"/>

</androidx.constraintlayout.widget.ConstraintLayout>